--- a/src/widgets/layout/layout.module.css
+++ b/src/widgets/layout/layout.module.css
@@ -5,8 +5,8 @@
 
 @media screen and (max-width: 980px) {
   .container {
-    max-width: 768px;
-    padding: 0px 10px 0px 10px;
+    /* max-width: 768px; */
+    padding: 10px;
   }
 }
 
