--- a/src/entities/chips/ui/chips.module.css
+++ b/src/entities/chips/ui/chips.module.css
@@ -1,12 +1,26 @@
-.chips {
-  max-width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
+.chip {
+  padding: 12px 20px;
+  background-color: #f5f5f5;
+  border-radius: 24px;
+  cursor: pointer;
+  white-space: nowrap;
+  color: #000;
 }
 
+.chip:hover {
+  border: 2px solid #f76935a8;
+  padding: 10px 18px;
+}
 .chip_active {
+  padding: 10px 18px;
   background-color: black;
   color: #fff;
+  border: 2px solid #f76935a8;
 }
 
+/* @media screen and (max-width: 450px) {
+  .chips {
+    width: 425px;
+    overflow-x: auto;
+  }
+} */
