--- a/src/entities/credit_action/ui/credit_action.module.css
+++ b/src/entities/credit_action/ui/credit_action.module.css
@@ -1,23 +1,31 @@
 .credit_actions {
-    display: flex;
-    max-width: 526px;
-    height: 48px;
+  display: flex;
+  max-width: 526px;
+  height: 48px;
 }
 
 .credit_action_send {
-    margin-right: 26px;   
+  margin-right: 26px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+}
+.info_action {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 450px) {
-    .credit_actions {
-        flex-direction: column;
-        align-items: center;
-        height: fit-content;
-    }
+  .credit_actions {
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+  }
 
-    .credit_action_send {
-        width: 96%;
-        margin: 0px;
-        /* margin: 0px 20px; */
-    }
+  .credit_action_send {
+    width: 96%;
+    margin: 0px;
+    /* margin: 0px 20px; */
+  }
 }
