--- a/src/widgets/credit_good_to_know/ui/credit_good_to_know.module.css
+++ b/src/widgets/credit_good_to_know/ui/credit_good_to_know.module.css
@@ -1,8 +1,9 @@
 .crdit_good_to_know_container {
   height: fit-content;
-  padding: 20px 10px;
+  padding: 20px 0px;
   display: flex;
   flex-direction: column;
+  gap: 24px;
 }
 
 /* .crdit_good_to_know_wrap {
@@ -13,7 +14,6 @@
   font-size: 28px;
   font-weight: 600;
   line-height: 32px;
-  margin-bottom: 26px;
   color: #000;
 }
 
@@ -44,4 +44,10 @@
   font-weight: 400;
   line-height: 24px;
   color: #171717;
+}
+
+@media screen and (max-width: 450px) {
+  .crdit_good_to_know_container {
+    gap: 20px;
+  }
 }
