--- a/src/features/tabs/ui/tabs.module.css
+++ b/src/features/tabs/ui/tabs.module.css
@@ -1,8 +1,8 @@
-.tabs {
+/* .tabs {
   width: 768px;
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .tab_link {
   text-decoration: none;
