--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap");
+
 html,
 body,
 main {
   height: 100%;
+  font-family: "Golos Text", sans-serif;
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
   padding: 0;
   margin: 0;
   color: #737373;
   font-size: 14px;
   line-height: 16px;
   user-select: none;
+  font-family: "Golos Text", sans-serif !important;
 }
 
 a {
