--- a/src/shared/elevated_button/elevated_button.module.css
+++ b/src/shared/elevated_button/elevated_button.module.css
@@ -6,3 +6,15 @@
   color: #fff;
   cursor: pointer;
 }
+
+.elevated_button_wrapper {
+  width: 172px;
+}
+
+@media screen and (max-width: 450px) {
+  .elevated_button_wrapper {
+    width: 88%;
+    display: flex;
+    justify-content: center;
+  }
+}
