--- a/src/widgets/credit_good_to_know/ui/credit_good_to_know.module.css
+++ b/src/widgets/credit_good_to_know/ui/credit_good_to_know.module.css
@@ -10,6 +10,14 @@
   max-height: 336px;
 } */
 
+.credit_good_to_know_wrap {
+  display: flex;
+  overflow-x: scroll;
+  justify-content: start;
+  /* width: 768px; */
+  padding: 3px 0px;
+}
+
 .good_to_know_title {
   font-size: 28px;
   font-weight: 600;
@@ -21,7 +29,7 @@
   padding: 12px 20px;
   background-color: #f5f5f5;
   border-radius: 24px;
-  height: 40px;
+  /* height: 40px; */
   white-space: nowrap;
   cursor: pointer;
   color: #000;
@@ -45,7 +53,14 @@
   line-height: 24px;
   color: #171717;
 }
-
+/* @media screen and (max-width: 769px) {
+  /* .credit_good_to_know_wrap {
+    display: flex;
+    overflow: scroll;
+    justify-content: start;
+    width: 650px;
+  } */
+/* } */
 @media screen and (max-width: 450px) {
   .crdit_good_to_know_container {
     gap: 20px;
