--- a/src/widgets/credit_type_card/ui/credit_type_card.module.css
+++ b/src/widgets/credit_type_card/ui/credit_type_card.module.css
@@ -34,6 +34,16 @@
   text-align: center;
 }
 
+@media screen and (max-width: 900px) {
+  .credit_type_card {
+    flex-direction: column-reverse;
+    align-items: center;
+    /* height: fit-content; */
+    margin-bottom: 24px;
+    padding: 30px 0px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .credit_type_card {
     flex-direction: column-reverse;
