--- a/src/widgets/footer/ui/footer.module.css
+++ b/src/widgets/footer/ui/footer.module.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   width: 100%;
   height: 392px;
   background-color: #f5f5f5;
@@ -6,22 +6,27 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+} */
 
 .footer_wrapper {
-  height: 264px;
-  max-width: 980px;
+  height: 392px;
+  /* max-width: 980px; */
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-.contact_us {
+/* .footer_wrapper */
+/* .contact_us {
   display: flex;
   flex-wrap: wrap;
   gap: 64px;
 }
 .store_path {
   max-width: 260px;
-}
-.store_path_title {
+} */
+/* .store_path_title {
   margin-bottom: 12px;
   font-size: 16px;
   font-weight: 400;
@@ -69,9 +74,8 @@
   font-weight: 400;
   line-height: 24px;
   padding-bottom: 5px;
-  /* margin-bottom: 12px; */
-}
-.contact_phone_tjk_info {
+} */
+/* .contact_phone_tjk_info {
   margin-top: 12px;
   font-size: 14px;
   font-weight: 400;
@@ -112,57 +116,57 @@
   border: none;
   height: 1px;
   background-color: #e6e6e6;
-}
+} */
 
-.footer_faq_list {
+/* .footer_faq_list {
   display: flex;
   max-width: 980px;
   gap: 32px;
-}
+} */
 
-.footer_faq_list_item {
-  /* max-width: fit-content; */
+/* .footer_faq_list_item {
+  max-width: fit-content;
   list-style-type: none;
-}
+} */
 
 @media screen and (max-width: 980px) {
-  .footer {
+  /* .footer {
     height: 586px;
     justify-content: start;
-  }
+  } */
   .footer_wrapper {
-    margin: 16px;
-    gap: 32px
+    height: 586px;
+    /* margin: 16px; */
+    /* padding: 16px; */
+    gap: 32px;
   }
-  .contact_us {
+  /* .contact_us {
     flex-direction: column-reverse;
   }
-  .store_path_title{
+  .store_path_title {
     display: none;
   }
   .contacts {
     flex-direction: column;
     gap: 12px;
   }
-  .footer_line{
+  .footer_line {
     display: none;
   }
   .footer_navbar {
     gap: 48px;
   }
-  .footer_navbar_list{
+  .footer_navbar_list {
     width: 140px;
     gap: 16px;
-  }
-  .footer_faq{
-    /* background-color: #fff; */
+  } */
+  /* .footer_faq {
     padding: 24px 16px;
     width: 100%;
     height: 160px;
   }
-  .footer_faq_list{
-
+  .footer_faq_list {
     flex-direction: column;
     gap: 16px;
-  }
+  } */
 }
