--- a/src/shared/elevated_button/elevated_button.module.css
+++ b/src/shared/elevated_button/elevated_button.module.css
@@ -5,16 +5,11 @@
   border-radius: 24px;
   color: #fff;
   cursor: pointer;
-}
-
-.elevated_button_wrapper {
-  width: 172px;
+  /* max-width: 172px; */
 }
 
 @media screen and (max-width: 450px) {
-  .elevated_button_wrapper {
-    width: 88%;
-    display: flex;
-    justify-content: center;
+  .elevated_button {
+    width: 100%;
   }
 }
